# Riverhead-NY-Budget-Web-App

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  parse-financial-reports.yml
docs/: INTELLIGENCE_MODULES_ADOPTED.md  PARSER_UI_WIRING_ADOPTED.md  WEBSITE_MODULES_ADOPTED.md
etl/: analyze_buyout.py  analyze_consent_calendar.py  build_search_index.py  export_csv.py  fetch_meetings.py  parse_afr.py  parse_agenda_packet.py  parse_all_pdfs.py  parse_budget_history.py  parse_cpf.py  parse_fiscal_impact.py  parse_general_fund.py  parse_meetings.py  parse_payroll.py  parse_salary_2026.py  parse_salary_schedule.py  parse_subaccounts.py  predict_2027.py  requirements.txt  run_ingestion_safe.py  write_meta.py  xls_to_slim.py
etl/data/: retirees-2019.json
supabase/: schema.sql
web/: next.config.js  package.json
web/app/: layout.tsx  page.tsx  sitemap.ts
web/components/: AuthorizedSalary.tsx  Budget2027Table.tsx  BuyoutEligible.tsx  CampaignFinance.tsx  CapBalancer.tsx  CapitalDebtCalculator.tsx  CompareExplorer.tsx  EmployeeDonorWatch.tsx  FiscalCommandCenter.tsx  FiscalImpactMeetings.tsx  FiscalImpactTable.tsx  FundDrilldown.tsx  Glossary.tsx  InteractiveDashboard.tsx  LineChart.tsx  MeetingVotes.tsx  OutlierWatch.tsx  PageShell.tsx  PayrollExplorer.tsx  PayrollTabs.tsx  PlainCallout.tsx  ReserveDrawdownSlider.tsx  SalaryRaises.tsx  SiteNav.tsx  Sparkline.tsx  SpendingReductionToggleList.tsx  TaxBillEstimator.tsx  Term.tsx  TrendColors.tsx  UnifiedSearch.tsx  useFetchJson.tsx
web/lib/: afr.ts  analytics-modules.ts  budget-history.ts  (+20 more)
(+329 files in other folders)
