cat > pyproject.toml << 'EOF'
[project]
name = "riverhead-budget-etl"
version = "0.1.0"
description = "ETL pipeline for Riverhead Budget Live"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cryptography>=42.0.0",
    "pypdf>=5.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C4", "UP", "SIM", "PL", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
EOF
